# Projektna_Programiranje_2

./: .gitignore  LICENSE  README.md  asf
machine/: Cargo.toml  get_ping.py  get_sequence.py  main.py
machine/src/: communication.rs  expressions.rs  functions.rs  main.rs  sequences.rs  structs.rs
machine/src/communication/: expected.rs  find_owner.rs  find_owners.rs  get_and_post.rs  get_foreign_vector.rs  get_vector.rs  http_handling.rs  log_in.rs  other.rs  request_vector.rs  user_sequences.rs  users.rs
machine/src/functions/: check_sequences.rs  eval.rs  get_foreign_vector.rs  get_foreign_vector_support.rs  get_ip.rs  get_list.rs  get_name.rs  get_port.rs  get_ports.rs  get_range.rs  get_register_port.rs  get_sequence.rs  get_vector.rs  get_vector_support.rs  handle.rs  our_sequences.rs  size.rs
machine/src/functions/get_foreign_vector_support/: average.rs  averages.rs  binary.rs  constant.rs  drop.rs  fibonacci.rs  floor.rs  linear_combination.rs  max.rs  min.rs  other.rs  product.rs  random.rs  sum.rs
machine/src/functions/get_vector_support/: arithmetic.rs  average.rs  constant.rs  max.rs  (+7 more)
machine/src/mathematical_functions/: power.rs
machine/src/sequences/: arithmetic.rs  average.rs  averages.rs  binary.rs  combined.rs  constant.rs  drop.rs  fibonacci.rs  floor.rs  geometric.rs  linear_combination.rs  max.rs  min.rs  models.rs  product.rs  random.rs  sum.rs
machine/src/structs/: custom_error.rs  project.rs  range.rs  sequences.rs
machine/testi/: arithmetic.py  constant.py  geometric.py  get_sequence.py  sum.py
machine/tests/: get_ping.py  test.py
(+2 files in other folders)
