[package]
name = "machine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
httparse = "1.8.0"
bytes = "1.2"
serde = { version = "1.0.200", features = ["derive"] }
serde_json = "1.0.116"
hyper = { version = "1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
reqwest = "0.12.4"
hyper-tls = "0.6.0"
async-recursion = "1.1.1"
regex = "1.10.6"
nois = "2.0.0"
cosmwasm-std = "2.1.3"
futures = "0.3.30"
